--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -35,8 +35,8 @@ RUN rm -rf /var/www/html
 COPY . /var/www
 
 # Instale as dependências do Laravel
-RUN composer install
 
-CMD php artisan serve --host=0.0.0.0 --port=8000
+
+CMD composer install && php artisan migrate && php artisan serve --host=0.0.0.0 --port=8000
 
 EXPOSE 8000
